# LASER-Software

./: README.md  plots.py
laikago_ros/a1_description/: tmp.urdf
laikago_ros/a1_description/xacro/: const.xacro  robot.xacro  robot_old.xacro
laikago_ros/aliengo_description/launch/: aliengo_rviz.launch
laikago_ros/aliengo_description/xacro/: const.xacro  robot.xacro  robot_ub18.xacro
laikago_ros/jumping/: convert_mat_to_csv.m
laikago_ros/jumping/010823214138/: vecnorm_params.csv
laikago_ros/jumping/011623103115/: vecnorm_params.csv
laikago_ros/jumping/011823155742/: vecnorm_params.csv
laikago_ros/jumping/012023121318/: vecnorm_params.csv
laikago_ros/jumping/012623125238/: vecnorm_params.csv
laikago_ros/jumping/030423224456/: vecnorm_params.csv
laikago_ros/jumping/070323135426/: vecnorm_params.csv
laikago_ros/jumping/070423170652/: vecnorm_params.csv
laikago_ros/jumping/070523224525/: vecnorm_params.csv
laikago_ros/jumping/070623221405/: vecnorm_params.csv
laikago_ros/jumping/112722214809/: vecnorm_params.csv
laikago_ros/jumping/112922190931/: vecnorm_params.csv
laikago_ros/jumping/120122183552/: vecnorm_params.csv
laikago_ros/jumping/120122185909/: vecnorm_params.csv
laikago_ros/jumping/121222230854/: vecnorm_params.csv
laikago_ros/jumping/121622215839/: vecnorm_params.csv
laikago_ros/jumping/data10_forward/: Note.txt  jumpingFull_A1_1ms_h00_d60_full_state.csv  jumpingFull_A1_1ms_h00_d60_full_state.mat  jumpingFull_A1_1ms_h00_d70_full_state.mat  jumpingFull_A1_1ms_h00_d80_full_state.mat  jumpingFull_A1_1ms_h10_d60_full_state.mat  jumpingFull_A1_1ms_h10_d70_full_state.mat  jumpingFull_A1_1ms_h10_d80_full_state.mat  jumpingFull_A1_1ms_h20_d60_full_state.csv  jumpingFull_A1_1ms_h20_d60_full_state.mat  jumpingFull_A1_1ms_h20_d70_full_state.mat  jumpingFull_A1_1ms_h30_d60_full_state.mat
laikago_ros/jumping/data11_forward/: jumpingFull_A1_1ms_h20_d60_full_state.csv  jumpingFull_A1_1ms_h20_d60_full_state.mat  optimize_jumping_up_platform_motor_constraints_for_RL_v2.m
laikago_ros/jumping/data12_forward/: convert_mat_to_csv_and_txt.m  jumpingFull_A1_1ms_h20_d60_full_state.csv  jumpingFull_A1_1ms_h20_d60_full_state.mat  optimize_jumping_up_platform_motor_constraints_for_RL_v2.m
laikago_ros/jumping/data14_forward/: convert_mat_to_csv.m  jumpingFull_A1_1ms_h20_d60_full_state.mat  jumpingFull_A1_1ms_h20_d60_full_state.txt  optimize_jumping_up_platform_motor_constraints_for_RL.m
laikago_ros/jumping/data15_forward/: convert_mat_to_csv.m  jumpingFull_A1_1ms_h20_d60_full_state.mat  jumpingFull_A1_1ms_h20_d60_full_state.txt  optimize_jumping_up_platform_motor_constraints_for_RL.m
laikago_ros/jumping/data8_forward/: Readme.txt  convert_mat_to_csv_and_txt.m  jumpingFull_A1_1ms_h20_d60_full_state.mat  jumpingFull_A1_1ms_h20_d60_full_state.txt  jumpingFull_A1_1ms_h20_d80_full_state.csv  jumpingFull_A1_1ms_h20_d80_full_state.mat
laikago_ros/jumping/data9_backflip/: backflipFull_A1_1ms_h0_d-50_full_state.csv  backflipFull_A1_1ms_h0_d-50_full_state.mat  convert_mat_to_csv_and_txt.m
laikago_ros/jumping/data9_forward/: jumpingFull_A1_1ms_h00_d60_full_state.csv  jumpingFull_A1_1ms_h00_d60_full_state.txt
laikago_ros/jumping/my_model/: saved_model.pb  vecnorm_params.csv
laikago_ros/jumping/my_model2/: checkpoint  graph.pb  model.index
laikago_ros/jumping_iros/070922094855/: vecnorm_params.csv
laikago_ros/jumping_iros/071022233312/: vecnorm_params.csv
laikago_ros/jumping_iros/model_imitation/: checkpoint  graph.pb  model.index  my_model.index  vecnorm_params.csv
laikago_ros/laikago_gazebo/: CMakeLists.txt
laikago_ros/laikago_gazebo/BalanceController/: BalanceController.cpp  BalanceController.hpp  QPLocomotion.cpp  QPLocomotion.h
laikago_ros/laikago_gazebo/ConvexMPC/: ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h  ConvexMPC_interface.cpp  ConvexMPC_interface.h  RobotState.cpp  RobotState.h  SolverMPC.cpp
laikago_ros/laikago_gazebo/PybulletInterface/: Jumping.cpp  Jumping.h  PybulletInterface.cpp  PybulletInterface.h
laikago_ros/laikago_gazebo/cppflow/examples/efficientnet/: create_model.py  main.cpp
laikago_ros/laikago_gazebo/cppflow/examples/load_model/: create_model.py  main.cpp
laikago_ros/laikago_gazebo/cppflow/examples/multi_input_output/: create_model.py  main.cpp
laikago_ros/laikago_gazebo/cppflow_old/: CMakeLists.txt
laikago_ros/laikago_gazebo/cppflow_old/examples/load_model/: CMakeLists.txt  main.cpp
laikago_ros/laikago_gazebo/include/: ContactEstimator.h  CurrentState.h  DesiredCommand.h  FSM_locomotion.h  GaitScheduler.h  LegController.h  QPLocomotion.h  Quadruped.h  StateEstimatorContainer.h  aliengo.h  body.h  cppTypes.h
laikago_ros/laikago_gazebo/include/Dynamics/: ActuatorModel.h  AlienGo.h  DynamicsSimulator.h  FloatingBaseModel.h  MiniCheetah.h  Quadruped.h  SpatialInertia.h  spatial.h
laikago_ros/laikago_gazebo/launch/: a1.launch  aliengo.launch  gazebo.xacro
laikago_ros/laikago_gazebo/launch/world/: normal.world
laikago_ros/laikago_gazebo/plugin/: draw_force_plugin.cc
laikago_ros/laikago_gazebo/src/: CurrentState.cpp  DesiredCommand.cpp  FSM.cpp  FloatingBaseModel.cpp  Gait.cpp  LegController.cpp  PositionVelocityEstimator.cpp  QPLocomotion.cpp  Quadruped.cpp  body.cpp
laikago_ros/laikago_gazebo/src/exe/: DRCL.cpp  cube_spawner.cpp  hri_fsm.cpp  jump.cpp  jump_rl.cpp  jump_rl_old.cpp  leg_test.cpp  ori_test.cpp  pyb_mpc.cpp  pyb_mpc_interface_notes.cpp  pyb_send_state.cpp  pyb_stand.cpp  rl_gym_helper.cpp  run.cpp  run_cpg.cpp  run_rl_actions.cpp  servo.cpp  test_tf.cpp
laikago_ros/laikago_msgs/: CMakeLists.txt
laikago_ros/optimization_data/: data_Ff.csv  data_Fr.csv  data_Q.csv  data_tau.csv  parse_data.py
(+147 files in other folders)
